Added tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# Enable mouse support
+# Enable mouse mode (for interacting with panes, scrolling, etc.)
 set -g mouse on
-
-# Allow selecting text with the mouse without jumping panes
-setw -g mode-mouse off
 
